h1 span fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -15,7 +15,7 @@
 
         h1 {
             span {
-                color: #f7b300;
+                color: #aa7a00;
             }
         }
 
