--- a/style/style.css
+++ b/style/style.css
@@ -185,7 +185,7 @@ header nav .nav-ul {
   gap: 1rem;
 }
 .main .main_text_wrapper h1 span {
-  color: #f7b300;
+  color: #aa7a00;
 }
 .main .main_text_wrapper p {
   color: #6c6c6c;
